2004-06-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfontbutton.c (gtk_font_button_update_font_info): Avoid
	a crash if the font doesn't exist.  (#144967, Yevgen Muntyan) 

Fri Jun 25 00:32:15 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreestore.c (gtk_tree_store_swap): Commit the change
	which was mentioned below.

Thu Jun 24 23:35:09 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtknotebook.c (gtk_notebook_class_init): Fix a typo,
	string change.  (#139503, Baris Cicek)

2004-06-22  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (location_popup_handler): Use a Save
	or an Open stock button for the C-l dialog depending on the action
	in which the file chooser operates.  Fixes #141753.

2004-06-22  Federico Mena Quintero  <federico@ximian.com>

	Fixes the GTK+ part of #142308:

	* gtk/gtkfilesystemunix.c (gtk_file_system_unix_filename_to_path):
	Use filename_to_path().
	(gtk_file_system_unix_uri_to_path): Likewise.
	(filename_to_path): Use remove_trailing_slash().

2004-06-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_class_init): Improve docs
	for the ::move_cursor signal.

	* gtk/gtkaccelmap.c (_gtk_accel_path_is_valid): Accept
	"<WINDOWTYPE>" as a valid accel path.  (#144427, Philip 
	Kendall)	

	* gtk/gtkselection.c (GTK_SELECTION_MAX_SIZE): Make sure 
	this gets defined for all backends, so linux-fb has a 
	chance of compiling.

	* gdk/x11/gdkgc-x11.c: 
	* gdk/gdkgc.c: Move function docs inline, add hints about 
	obtaining rgb colors from gcs.  (#144688, Steve Chaplin)

	* gtk/gtktreestore.c (gtk_tree_store_swap): Make this work
	for children of the root.  (#139785, Jean-François Wauthy,
	patch by John Finlay)

	* gtk/gtkicontheme.h (GTK_ICON_THEME_GET_CLASS): Typo
	fix.  (#144750, Jeff Franks) 

2004-06-21  Michael Natterer  <mitch@gimp.org>
	Merge from stable:

	* gdk/x11/gdkdrawable-x11.[ch]: made convert_format() utility
	function public as _gdk_x11_convert_to_format().
